Fixed button not showing the right cursor

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ p {
 a {
     font-family: Circular Light;
     color: var(--darkblue);
+    cursor: pointer;
 }
 
 .splash {
